# doc-mgmt-platform

./: .env  .env.example  .gitignore  README.md  docker-compose.deploy.yml  docker-compose.pre-deploy.yml  docker-compose.yml  pytest.ini
db/: Dockerfile  init.sql
web/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  run.py
web/app/: app.py  config.py  db.py  utils.py
web/app/components/: __init__.py
web/app/components/admin_service/: __init__.py  routes.py  service.py
web/app/components/audit_log/: __init__.py  service.py
web/app/components/auth_session/: __init__.py  auth_rate_limiter.py  auth_required.py  csrf.py  csrf_filter.py  decorators.py  routes.py  session_config.py  session_lifecycle.py
web/app/components/authorization/: __init__.py  service.py
web/app/components/dal/: __init__.py  audit_log.py  documents.py  users.py  utils.py
web/app/components/document_service/: __init__.py  routes.py  service.py
web/app/components/input_validation_filter/: __init__.py  file_validator.py
web/app/components/sanitizing_storage_adapter/: __init__.py  adapter.py
web/app/components/upload_guard/: __init__.py  upload_rate_limiter.py
web/app/decorators/: auth.py
web/app/routes/: admin.py  documents.py  download.py  health.py  index.py  login.py  logout.py  share.py  users.py
web/nginx/: nginx.conf  nginx.dev.conf
web/nginx/certs/: fullchain.pem  privkey.pem
web/static/: VALIDATION_DONT_REMOVE.txt  script.js  style.css
web/templates/: base.html  document_details.html  documents.html  login.html  shared_documents.html  users.html
(+56 files in other folders)
