[project]
name = "web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "monkeypatch>=0.1rc3",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.3",
    "python-magic>=0.4.27",
    "requests>=2.33.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
